--- a/index.html
+++ b/index.html
@@ -9,28 +9,86 @@
         <!--esse é o css da nossa manipulação-->
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light margin">
           <a class="navbar-brand" href="#">Minha Página</a>
              <img src="img/Globallabs.jpg" width="220" height="100">
           </a>
                 <div class="collapse navbar-collapse">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <ul class="navbar-nav ">
                         <li class="nav-item">
-                           <a class="nav-link" href="#">Quem Somos</a>
+                           <a class="nav-link" href="#quemsomos">Quem Somos</a>
                         </li> 
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Parceiros</a>
+                            <a class="nav-link" href="#Parceiros">Parceiros</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                            <a class="nav-link" href="#servicos">Serviços</a>
                         </li>
                  </ul>
 
                 </div>
 
       </nav>
+
+
+      <section id="quemsomos">
+         <div class="container-fluid quem-somos text-center margin">
+           <h3 class="margin">Quem Somos</h3>
+           <img src="img/foto3.jpeg" class="rounded-circle" widith="400" height="400" >
+           <h3> Somos um time comprometido com os resultados</h3>
+         </div>
+      </section>
+
+      <section id="parceiros">
+         <div class="container-fluid parceiros text-center margin ">
+            <h3 class="margin">Parceiros</h3>
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-4">
+                     <img src="img/digital inovation one.png" rounded widith="400" height="200">
+                  </div>
+                  <div class="col-lg-4">
+                     <img src="img/digital inovation one.png" rounded widith="400" height="200">
+                  </div>
+                  <div class="col-lg-4" >
+                     <img src="img/digital inovation one.png" rounded widith="400" height="200">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <section id="serviços">
+         <div class="container-fluid serviços text-center margin" >
+            <h3 class ="margin">Serviços</h3>
+            <div class="row">
+               <div class="col-lg-4">
+                  <p> Usando um texto ou um parágrafo sobre a imagem</p>
+                  <img src="img/foto1.jpeg" width="100%">
+               </div>
+               <div class="col-lg-4">
+                  <p> Usando um texto ou um parágrafo sobre a imagem</p>
+                  <img src="img/foto2.jpeg" width="100%">
+               </div>
+               <div class="col-lg-4">
+                  <p> Usando um texto ou um parágrafo sobre a imagem</p>
+                  <img src="img/foto1.jpeg" width="100%">
+               </div>
+               
+
+         </div>
+
+      </section>
+
+      <footer class="container-fluid text-center bg-footer margin">
+         <p>
+            Desenvolvido por ARI
+         </p>
+      </footer>
+
+
    </body>
 
    
